--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -13,8 +13,8 @@ h1{
 
 .container{
     display: flex;
-    width: 75rem;
-    height: 28.125rem;
+    width: 1200px;
+    height: 450px;
     margin:  auto auto;
     border: 1px solid red;
 }
@@ -22,10 +22,28 @@ h1{
 .container--profile{
     flex-grow: 0.3;
     display: flex;
-    
+    background-color: blue;
     border: 1px solid red;
 }
 
+.container--profile-name
+{
+    background-color: brown;
+}
+
+.container--profile-time
+{
+    background-color: darkcyan;
+}
 .container--cards{
     flex-grow: 2;
+}
+
+.cards
+{
+    background-color: black; 
+    color: white;
+    border: 1px solid green;
+    margin: 5px 20px 10px 8px;
+    padding: 20px;
 }
